Ajout de la majorité des messages

--- a/public/index.html
+++ b/public/index.html
@@ -54,15 +54,15 @@
 				<span class="avatar avatar-sm"><img alt="Kevin" src="./images/users/KevinSmall.jpg"></span>
 			</a>
 			<!--<ul class="dropdown-menu">-->
-				<!--<li>-->
-					<!--<a class="padding-right-lg waves-attach" href="javascript:void(0)"><span class="icon icon-lg margin-right">account_box</span>Profile Settings</a>-->
-				<!--</li>-->
-				<!--<li>-->
-					<!--<a class="padding-right-lg waves-attach" href="javascript:void(0)"><span class="icon icon-lg margin-right">add_to_photos</span>Upload Photo</a>-->
-				<!--</li>-->
-				<!--<li>-->
-					<!--<a class="padding-right-lg waves-attach" href="#"><span class="icon icon-lg margin-right">exit_to_app</span>Logout</a>-->
-				<!--</li>-->
+			<!--<li>-->
+			<!--<a class="padding-right-lg waves-attach" href="javascript:void(0)"><span class="icon icon-lg margin-right">account_box</span>Profile Settings</a>-->
+			<!--</li>-->
+			<!--<li>-->
+			<!--<a class="padding-right-lg waves-attach" href="javascript:void(0)"><span class="icon icon-lg margin-right">add_to_photos</span>Upload Photo</a>-->
+			<!--</li>-->
+			<!--<li>-->
+			<!--<a class="padding-right-lg waves-attach" href="#"><span class="icon icon-lg margin-right">exit_to_app</span>Logout</a>-->
+			<!--</li>-->
 			<!--</ul>-->
 		</li>
 	</ul>
@@ -99,18 +99,18 @@
 								</div>
 							</a>
 						</li>
-						<!--<li>-->
-							<!--<a class="waves-attach" href="#/VirginieSOK">-->
-								<!--<div class="card-header">-->
-									<!--<div class="card-header-side pull-left">-->
-										<!--<span class="avatar avatar-sm"><img src="./images/profils/VirginieSOK.jpg"></span>-->
-									<!--</div>-->
-									<!--<div class="card-inner">-->
-										<!--<span>Virginie SOK</span>-->
-									<!--</div>-->
-								<!--</div>-->
-							<!--</a>-->
-						<!--</li>-->
+						<li>
+							<a class="waves-attach" href="#/VirginieSOK">
+								<div class="card-header">
+									<div class="card-header-side pull-left">
+										<span class="avatar avatar-sm"><img src="./images/profils/VirginieSOK.jpg"></span>
+									</div>
+									<div class="card-inner">
+										<span>Virginie SOK</span>
+									</div>
+								</div>
+							</a>
+						</li>
 						<li>
 							<a class="waves-attach" href="#/OscarSChen">
 								<div class="card-header">
@@ -207,16 +207,76 @@
 								</div>
 							</a>
 						</li>
+						<li>
+							<a class="waves-attach" href="#/StephaneMahtout">
+								<div class="card-header">
+									<div class="card-header-side pull-left">
+										<span class="avatar avatar-sm"><img src="./images/profils/StephaneMahtout.jpg"></span>
+									</div>
+									<div class="card-inner">
+										<span>Stephane Mahtout</span>
+									</div>
+								</div>
+							</a>
+						</li>
+						<li>
+							<a class="waves-attach" href="#/JeremyNG">
+								<div class="card-header">
+									<div class="card-header-side pull-left">
+										<span class="avatar avatar-sm"><img src="./images/profils/JeremyNG.jpg"></span>
+									</div>
+									<div class="card-inner">
+										<span>Jeremy NG</span>
+									</div>
+								</div>
+							</a>
+						</li>
+						<li>
+							<a class="waves-attach" href="#/JessicaSOK">
+								<div class="card-header">
+									<div class="card-header-side pull-left">
+										<span class="avatar avatar-sm"><img src="./images/profils/JessicaSOK.jpg"></span>
+									</div>
+									<div class="card-inner">
+										<span>Jessica SOK</span>
+									</div>
+								</div>
+							</a>
+						</li>
+						<li>
+							<a class="waves-attach" href="#/PascalJonathanTRAN">
+								<div class="card-header">
+									<div class="card-header-side pull-left">
+										<span class="avatar avatar-sm"><img src="./images/profils/PascalJonathanTRAN.jpg"></span>
+									</div>
+									<div class="card-inner">
+										<span>Pascal & Jonathan TRAN</span>
+									</div>
+								</div>
+							</a>
+						</li>
+						<li>
+							<a class="waves-attach" href="#/AlexandreTRAN">
+								<div class="card-header">
+									<div class="card-header-side pull-left">
+										<span class="avatar avatar-sm"><img src="./images/profils/AlexandreTRAN.jpg"></span>
+									</div>
+									<div class="card-inner">
+										<span>Alexandre TRAN</span>
+									</div>
+								</div>
+							</a>
+						</li>
 					</ul>
 				</li>
 				<li>
 					<a class="collapsed waves-attach" data-toggle="collapse" href="#doc_menu_extras">Vidéos</a>
 					<ul class="collapse menu-collapse" id="doc_menu_extras">
 						<!--<li>-->
-							<!--<a class="waves-attach" href="#">2010</a>-->
+						<!--<a class="waves-attach" href="#">2010</a>-->
 						<!--</li>-->
 						<!--<li>-->
-							<!--<a class="waves-attach" href="#">Noel 2005</a>-->
+						<!--<a class="waves-attach" href="#">Noel 2005</a>-->
 						<!--</li>-->
 					</ul>
 				</li>
@@ -320,20 +380,20 @@
 					</a>
 				</td>
 			</tr>
-			<!--<tr>-->
-				<!--<td>-->
-					<!--<a class="waves-attach" href="#/VirginieSOK">-->
-						<!--<div class="card-header">-->
-							<!--<div class="card-header-side pull-left">-->
-								<!--<span class="avatar avatar-sm"><img src="./images/profils/VirginieSOK.jpg"></span>-->
-							<!--</div>-->
-							<!--<div class="card-inner">-->
-								<!--<span>Virginie SOK</span>-->
-							<!--</div>-->
-						<!--</div>-->
-					<!--</a>-->
-				<!--</td>-->
-			<!--</tr>-->
+			<tr>
+				<td>
+					<a class="waves-attach" href="#/VirginieSOK">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/VirginieSOK.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Virginie SOK</span>
+							</div>
+						</div>
+					</a>
+				</td>
+			</tr>
 			<tr>
 				<td>
 					<a class="waves-attach" href="#/OscarSChen">
@@ -441,6 +501,76 @@
 							</div>
 							<div class="card-inner">
 								<span>Jonathan DONG</span>
+							</div>
+						</div>
+					</a>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<a class="waves-attach" href="#/StephaneMahtout">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/StephaneMahtout.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Stephane Mahtout</span>
+							</div>
+						</div>
+					</a>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<a class="waves-attach" href="#/JeremyNG">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/JeremyNG.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Jeremy NG</span>
+							</div>
+						</div>
+					</a>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<a class="waves-attach" href="#/JessicaSOK">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/JessicaSOK.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Jessica SOK</span>
+							</div>
+						</div>
+					</a>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<a class="waves-attach" href="#/PascalJonathanTRAN">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/PascalJonathanTRAN.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Pascal & Jonathan TRAN</span>
+							</div>
+						</div>
+					</a>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<a class="waves-attach" href="#/AlexandreTRAN">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/AlexandreTRAN.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Alexandre TRAN</span>
 							</div>
 						</div>
 					</a>
@@ -690,21 +820,45 @@
 </script> <!-- FIN AXELLE LY -->
 
 <script id="VirginieSOK" type="text/x-kendo-template">
-	<div class="tile-wrap">
-		<a class    ="tile waves-attach" href="#">
-			<div class="tile-inner">
-				<table>
-					<tr>
-						<td class="MenuIconGauche">
-							<span class="avatar avatar-sm"><img src="./images/profils/VirginieSOK.jpg"></span>
-						</td>
-						<td class="MenuAlignDroite">
-							<span>Virginie SOK</span>
-						</td>
-					</tr>
-				</table>
+	<div class="col-md-12 col-sm-1">
+		<div class="card">
+			<div class="card-main">
+				<div class="card-header">
+					<div class="card-header-side pull-left">
+						<div class="avatar">
+							<img alt="Photo Anceline" src="./images/profils/VirginieSOK.jpg">
+						</div>
+					</div>
+					<div class="card-inner">
+						<span>Virginie SOK</span>
+					</div>
+				</div>
+				<div class="card-img">
+					<img alt="Photo Anceline" src="./images/VirginieSOK/HomeCardPic.jpg" style="width: 100%;">
+					<p class="card-img-heading">Salut Kévin !</p>
+				</div>
+				<div class="card-inner">
+					<p>
+						Coucou Kévin, <br/>
+						C'est avec grand plaisir que nous fêtons ton baptême. <br/>
+						C'est un plaisir de partager tous ces heureux moments à l'eglise avec toi (les répétitions de dernières minutes, la soirée de filmage en pleine nuit et montage de vidéos après minuit ;)). <br/>
+						C'est vraiment encourageant de voir ton parcours, de te voir grandir, de voir ta motivation, tes idées, ton sourire, ta bonne humeur !! <br/>
+						Que ce nouveau départ te permette de grandir, d'avancer jour après jour avec Dieu. De decouvrir l'immensité de Son Amour, Sa Justice, Sa Grandeur. <br/>
+						Que tu puisses être façonné selon Sa Volonté et qu'Il remplisse ton cœur. <br/>
+						Soit béni, <br/>
+						Ta soeur en Christ, <br/>
+						Virginie :D <br/>
+
+					<blockquote>
+						Je garde constamment les yeux fixés sur l’Eternel. Puisqu’il est près de moi , rien ne peut m’ébranler .
+						<div class="card-action-btn pull-right">
+							<a class="btn btn-flat waves-attach waves-effect" href="javascript:void(0)"><span class="icon">check</span>&nbsp;Psaumes 16:8 BDS</a>
+						</div>
+					</blockquote>
+					</p>
+				</div>
 			</div>
-		</a>
+		</div>
 	</div>
 </script>
 
@@ -1015,11 +1169,132 @@
 				</div>
 				<div class="card-inner">
 					<p>
-						Félicitations Kévin pour ton baptême ! Tu nous fais très plaisir et tu nous encourages par ton geste émoticône smile Que Dieu te garde durant toute ta vie, <br/>
+						Félicitations Kévin pour ton baptême ! Tu nous fais très plaisir et tu nous encourages par ton geste :) <br/>
+						Que Dieu te garde durant toute ta vie, <br/>
 				</div>
 			</div>
 		</div>
 	</div>
+</script>
+
+<script id="StephaneMahtout" type="text/x-kendo-template">
+	<div class="col-md-12 col-sm-1">
+		<div class="card">
+			<div class="card-main ColorBlock1">
+				<div class="card-header">
+					<div class="card-header-side pull-left">
+						<span class="avatar avatar-sm"><img src="./images/profils/StephaneMahtout.jpg"></span>
+					</div>
+					<div class="card-inner">
+						<span>Stephane Mahtout</span>
+					</div>
+				</div>
+				<div class="card-img">
+					<img alt="Photo Stephane" src="./images/StephaneMahtout/HomeCardPic.jpg" style="width: 100%;">
+				</div>
+				<div class="card-inner">
+					<p>
+						L'engagement que tu vas prendre Kevin est pour la vie. C'est le plus bel acte de repentance et de reconnaissance que tu vas proclamer devant l'assemblée, tes frères te tes sœurs en Christ. Certes ce ne sera pas toujours facile mais le Seigneur et l'église te soutiendront. En tout cas reçois tous mes encouragements pour le chemin que tu vas emprunter, n'oublies jamais qu'au dessus des nuages il y a toujours le soleil. Le groupe sera là pour t'entourer (moi y compris!). Je suis heureux de te connaitre et de pouvoir apprendre plus de Notre Seigneur au travers de toi, son serviteur.
+						Bonne route.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</script>
+
+<script id="JeremyNG" type="text/x-kendo-template">
+	<div class="col-md-12 col-sm-1">
+		<div class="card">
+			<div class="card-main ColorBlock1">
+				<div class="card-header">
+					<div class="card-header-side pull-left">
+						<span class="avatar avatar-sm"><img src="./images/profils/JeremyNG.jpg"></span>
+					</div>
+					<div class="card-inner">
+						<span>Jeremy NG</span>
+					</div>
+				</div>
+				<div class="card-inner">
+					<p>
+						Kevin, félicitations pour ton baptême, tu as très bien grandi, non seulement par ta taille mais aussi ta foi! Que tu puisses accomplir des grandes (ou petites, ça n'importe pas) choses pour le Seigneur ! À+ ;)
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</script>
+
+<script id="JessicaSOK" type="text/x-kendo-template">
+	<div class="col-md-12 col-sm-1">
+		<div class="card">
+			<div class="card-main">
+				<div class="card-header">
+					<div class="card-header-side pull-left">
+						<div class="avatar">
+							<img alt="Photo Anceline" src="./images/profils/JessicaSOK.jpg">
+						</div>
+					</div>
+					<div class="card-inner">
+						<span>Jessica SOK</span>
+					</div>
+				</div>
+				<div class="card-img">
+					<img alt="Photo Jessica" src="./images/JessicaSOK/HomeCardPic.jpg" style="width: 100%;">
+					<p class="card-img-heading"></p>
+				</div>
+				<div class="card-inner">
+					<p>
+						Toutes mes félicitations Kévin pour ce choix merveilleux que tu as fait. Que ta marche avec le Seigneur soit remplie de découvertes, de confiance et de bonheur. Je te souhaite de vivre des moments forts avec lui, qu'il puisse être pour toi un soutien dans chaque étape de ta vie.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</script>
+
+<script id="PascalJonathanTRAN" type="text/x-kendo-template">
+	<div class="col-md-4 col-sm-1"></div>
+	<div class="col-md-4 col-sm-1">
+		<div class="card">
+			<div class="card-main ColorBlock1">
+				<div class="card-header">
+					<div class="card-header-side pull-left">
+						<span class="avatar avatar-sm"><img src="./images/profils/PascalJonathanTRAN.jpg"></span>
+					</div>
+					<div class="card-inner">
+						<span>Pascal & Jonathan TRAN</span>
+					</div>
+				</div>
+				<div class="card-inner">
+					<img class="img-responsive" src="./images/PascalJonathanTRAN/HomeCardPic.jpg">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="col-md-4 col-sm-1"></div>
+</script>
+
+<script id="AlexandreTRAN" type="text/x-kendo-template">
+	<div class="col-md-4 col-sm-1"></div>
+	<div class="col-md-4 col-sm-1">
+		<div class="card">
+			<div class="card-main ColorBlock1">
+				<div class="card-header">
+					<div class="card-header-side pull-left">
+						<span class="avatar avatar-sm"><img src="./images/profils/AlexandreTRAN.jpg"></span>
+					</div>
+					<div class="card-inner">
+						<span>Pascal & Jonathan TRAN</span>
+					</div>
+				</div>
+				<div class="card-inner">
+					<img class="img-responsive" src="./images/AlexandreTRAN/HomeCardPic.jpg">
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="col-md-4 col-sm-1"></div>
 </script>
 
 <script>
@@ -1103,6 +1378,16 @@
 
 	var JonathanDONG = new kendo.View("JonathanDONG", { model: viewModel, init: viewModel.init.bind(viewModel), show: viewModel.show.bind(viewModel) });
 
+	var StephaneMahtout = new kendo.View("StephaneMahtout", { model: viewModel, init: viewModel.init.bind(viewModel), show: viewModel.show.bind(viewModel) });
+
+	var JeremyNG = new kendo.View("JeremyNG", { model: viewModel, init: viewModel.init.bind(viewModel), show: viewModel.show.bind(viewModel) });
+
+	var JessicaSOK = new kendo.View("JessicaSOK", { model: viewModel, init: viewModel.init.bind(viewModel), show: viewModel.show.bind(viewModel) });
+
+	var PascalJonathanTRAN = new kendo.View("PascalJonathanTRAN", { model: viewModel, init: viewModel.init.bind(viewModel), show: viewModel.show.bind(viewModel) });
+
+	var AlexandreTRAN = new kendo.View("AlexandreTRAN", { model: viewModel, init: viewModel.init.bind(viewModel), show: viewModel.show.bind(viewModel) });
+
 
 	// routing
 	var router = new kendo.Router();
@@ -1157,6 +1442,26 @@
 
 	router.route("/JonathanDONG", function() {
 		layout.showIn("#content", JonathanDONG, "swap");
+	});
+
+	router.route("/StephaneMahtout", function() {
+		layout.showIn("#content", StephaneMahtout, "swap");
+	});
+
+	router.route("/JeremyNG", function() {
+		layout.showIn("#content", JeremyNG, "swap");
+	});
+
+	router.route("/JessicaSOK", function() {
+		layout.showIn("#content", JessicaSOK, "swap");
+	});
+
+	router.route("/PascalJonathanTRAN", function() {
+		layout.showIn("#content", PascalJonathanTRAN, "swap");
+	});
+
+	router.route("/AlexandreTRAN", function() {
+		layout.showIn("#content", AlexandreTRAN, "swap");
 	});
 
 	$(function() {
