--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, width=device-width" name="viewport">
-	<title>Eglise baptise chinoise de marne la vallée</title>
+	<title>Église baptise chinoise de Marne-La-Vallée</title>
 
 	<link rel="stylesheet" href="./css/kendo.common.min.css"/>
 	<link rel="stylesheet" href="./css/kendo.rtl.min.css"/>
@@ -46,7 +46,7 @@
 			</a>
 		</li>
 	</ul>
-	<a class="header-logo margin-left-no" href="#">Baptème de Kevin LIM</a>
+	<a class="header-logo margin-left-no" href="#">Baptême de Kevin LIM</a>
 	<ul class="nav nav-list pull-right">
 		<li class="dropdown margin-right">
 			<a class="dropdown-toggle padding-left-no padding-right-no" data-toggle="dropdown">
@@ -289,7 +289,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-push-3 col-sm-10 col-sm-push-1">
-				<h1 class="heading">Eglise baptise chinoise de marne la vallée</h1>
+				<h1 class="heading">Église baptise chinoise de Marne-La-Vallée</h1>
 			</div>
 		</div>
 	</div>
@@ -330,7 +330,7 @@
 						<div class="card-inner">
 							<p>Petite page pour toi Kevin ! Amuse toi à regarder ce que tout le monde t'as laissé comme message !</p>
 							<blockquote> Kevin ! </blockquote>
-							<p>Un espace rien que pour ton baptème !</p>
+							<p>Un espace rien que pour ton Baptême !</p>
 						</div>
 					</div>
 				</div>
