Change minor error (name on Alexandre)

--- a/public/index.html
+++ b/public/index.html
@@ -1285,7 +1285,7 @@
 						<span class="avatar avatar-sm"><img src="./images/profils/AlexandreTRAN.jpg"></span>
 					</div>
 					<div class="card-inner">
-						<span>Pascal & Jonathan TRAN</span>
+						<span>Alexandre TRAN</span>
 					</div>
 				</div>
 				<div class="card-inner">
