Change name of Tim

--- a/public/index.html
+++ b/public/index.html
@@ -124,13 +124,13 @@
 							</a>
 						</li>
 						<li>
-							<a class="waves-attach" href="#/TimotheeThum">
+							<a class="waves-attach" href="#/TimotheeTHUM">
 								<div class="card-header">
 									<div class="card-header-side pull-left">
-										<span class="avatar avatar-sm"><img src="./images/profils/TimotheeThum.jpg"></span>
+										<span class="avatar avatar-sm"><img src="./images/profils/TimotheeTHUM.jpg"></span>
 									</div>
 									<div class="card-inner">
-										<span>Timothée Thum</span>
+										<span>Timothée THUM</span>
 									</div>
 								</div>
 							</a>
@@ -410,13 +410,13 @@
 			</tr>
 			<tr>
 				<td>
-					<a class="waves-attach" href="#/TimotheeThum">
+					<a class="waves-attach" href="#/TimotheeTHUM">
 						<div class="card-header">
 							<div class="card-header-side pull-left">
-								<span class="avatar avatar-sm"><img src="./images/profils/TimotheeThum.jpg"></span>
+								<span class="avatar avatar-sm"><img src="./images/profils/TimotheeTHUM.jpg"></span>
 							</div>
 							<div class="card-inner">
-								<span>Timothée Thum</span>
+								<span>Timothée THUM</span>
 							</div>
 						</div>
 					</a>
@@ -884,16 +884,16 @@
 	</div>
 </script>
 
-<script id="TimotheeThum" type="text/x-kendo-template">
+<script id="TimotheeTHUM" type="text/x-kendo-template">
 	<div class="col-md-12 col-sm-1">
 		<div class="card">
 			<div class="card-main ColorBlock1">
 				<div class="card-header">
 					<div class="card-header-side pull-left">
-						<span class="avatar avatar-sm"><img src="./images/profils/TimotheeThum.jpg"></span>
+						<span class="avatar avatar-sm"><img src="./images/profils/TimotheeTHUM.jpg"></span>
 					</div>
 					<div class="card-inner">
-						<span>Timothée Thum</span>
+						<span>Timothée THUM</span>
 					</div>
 				</div>
 				<div class="card-inner">
@@ -1334,8 +1334,8 @@
 			e.preventDefault();
 		},
 
-		goToViewTimotheeThum: function(e) {
-			router.navigate("/TimotheeThum");
+		goToViewTimotheeTHUM: function(e) {
+			router.navigate("/TimotheeTHUM");
 			e.preventDefault();
 		},
 
@@ -1364,7 +1364,7 @@
 
 	var OscarSChen = new kendo.View("OscarSChen", { model: viewModel, init: viewModel.init.bind(viewModel), show: viewModel.show.bind(viewModel) });
 
-	var TimotheeThum = new kendo.View("TimotheeThum", { model: viewModel, init: viewModel.init.bind(viewModel), show: viewModel.show.bind(viewModel) });
+	var TimotheeTHUM = new kendo.View("TimotheeTHUM", { model: viewModel, init: viewModel.init.bind(viewModel), show: viewModel.show.bind(viewModel) });
 
 	var DavidSOK = new kendo.View("DavidSOK", { model: viewModel, init: viewModel.init.bind(viewModel), show: viewModel.show.bind(viewModel) });
 
@@ -1416,8 +1416,8 @@
 		layout.showIn("#content", OscarSChen, "swap");
 	});
 
-	router.route("/TimotheeThum", function() {
-		layout.showIn("#content", TimotheeThum, "swap");
+	router.route("/TimotheeTHUM", function() {
+		layout.showIn("#content", TimotheeTHUM, "swap");
 	});
 
 	router.route("/DavidSOK", function() {
