Change menu for simpler

--- a/public/index.html
+++ b/public/index.html
@@ -72,214 +72,214 @@
 		<div class="menu-content">
 			<a class="menu-logo" href="#">Baptême de Kevin Lim</a>
 			<ul class="nav">
+				<!--<li>-->
+				<!--<a class="collaosed waves-attach" data-toggle="collapse" href="#doc_menu_components">Messages</a>-->
+				<!--<ul class="collapse menu-collapse" id="doc_menu_components">-->
 				<li>
-					<a class="collaosed waves-attach" data-toggle="collapse" href="#doc_menu_components">Messages</a>
-					<ul class="collapse menu-collapse" id="doc_menu_components">
-						<li>
-							<a class="waves-attach" href="#/CelineLIM">
-								<div class="card-header">
-									<div class="card-header-side pull-left">
-										<span class="avatar avatar-sm"><img src="./images/profils/CelineLIM.jpg"></span>
-									</div>
-									<div class="card-inner">
-										<span>Celine LIM</span>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a class="waves-attach" href="#/AxelleLY">
-								<div class="card-header">
-									<div class="card-header-side pull-left">
-										<span class="avatar avatar-sm"><img src="./images/profils/AxelleLY.jpg"></span>
-									</div>
-									<div class="card-inner">
-										<span>Axelle LY</span>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a class="waves-attach" href="#/VirginieSOK">
-								<div class="card-header">
-									<div class="card-header-side pull-left">
-										<span class="avatar avatar-sm"><img src="./images/profils/VirginieSOK.jpg"></span>
-									</div>
-									<div class="card-inner">
-										<span>Virginie SOK</span>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a class="waves-attach" href="#/OscarSChen">
-								<div class="card-header">
-									<div class="card-header-side pull-left">
-										<span class="avatar avatar-sm"><img src="./images/profils/OscarSChen.jpg"></span>
-									</div>
-									<div class="card-inner">
-										<span>Oscar S Chen</span>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a class="waves-attach" href="#/TimotheeTHUM">
-								<div class="card-header">
-									<div class="card-header-side pull-left">
-										<span class="avatar avatar-sm"><img src="./images/profils/TimotheeTHUM.jpg"></span>
-									</div>
-									<div class="card-inner">
-										<span>Timothée THUM</span>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a class="waves-attach" href="#/DavidSOK">
-								<div class="card-header">
-									<div class="card-header-side pull-left">
-										<span class="avatar avatar-sm"><img src="./images/profils/DavidSOK.jpg"></span>
-									</div>
-									<div class="card-inner">
-										<span>David SOK</span>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a class="waves-attach" href="#/PaulineTANG">
-								<div class="card-header">
-									<div class="card-header-side pull-left">
-										<span class="avatar avatar-sm"><img src="./images/profils/PaulineTANG.jpg"></span>
-									</div>
-									<div class="card-inner">
-										<span>Pauline TANG</span>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a class="waves-attach" href="#/OlivierManiphanh">
-								<div class="card-header">
-									<div class="card-header-side pull-left">
-										<span class="avatar avatar-sm"><img src="./images/profils/OlivierManiphanh.jpg"></span>
-									</div>
-									<div class="card-inner">
-										<span>Olivier Maniphanh</span>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a class="waves-attach" href="#/AncelineDONG">
-								<div class="card-header">
-									<div class="card-header-side pull-left">
-										<span class="avatar avatar-sm"><img src="./images/profils/AncelineDONG.jpg"></span>
-									</div>
-									<div class="card-inner">
-										<span>Anceline DONG</span>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a class="waves-attach" href="#/MarleneDONG">
-								<div class="card-header">
-									<div class="card-header-side pull-left">
-										<span class="avatar avatar-sm"><img src="./images/profils/MarleneDONG.jpg"></span>
-									</div>
-									<div class="card-inner">
-										<span>Marlène DONG</span>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a class="waves-attach" href="#/JonathanDONG">
-								<div class="card-header">
-									<div class="card-header-side pull-left">
-										<span class="avatar avatar-sm"><img src="./images/profils/JonathanDONG.jpg"></span>
-									</div>
-									<div class="card-inner">
-										<span>Jonathan DONG</span>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a class="waves-attach" href="#/StephaneMahtout">
-								<div class="card-header">
-									<div class="card-header-side pull-left">
-										<span class="avatar avatar-sm"><img src="./images/profils/StephaneMahtout.jpg"></span>
-									</div>
-									<div class="card-inner">
-										<span>Stephane Mahtout</span>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a class="waves-attach" href="#/JeremyNG">
-								<div class="card-header">
-									<div class="card-header-side pull-left">
-										<span class="avatar avatar-sm"><img src="./images/profils/JeremyNG.jpg"></span>
-									</div>
-									<div class="card-inner">
-										<span>Jeremy NG</span>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a class="waves-attach" href="#/JessicaSOK">
-								<div class="card-header">
-									<div class="card-header-side pull-left">
-										<span class="avatar avatar-sm"><img src="./images/profils/JessicaSOK.jpg"></span>
-									</div>
-									<div class="card-inner">
-										<span>Jessica SOK</span>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a class="waves-attach" href="#/PascalJonathanTRAN">
-								<div class="card-header">
-									<div class="card-header-side pull-left">
-										<span class="avatar avatar-sm"><img src="./images/profils/PascalJonathanTRAN.jpg"></span>
-									</div>
-									<div class="card-inner">
-										<span>Pascal & Jonathan TRAN</span>
-									</div>
-								</div>
-							</a>
-						</li>
-						<li>
-							<a class="waves-attach" href="#/AlexandreTRAN">
-								<div class="card-header">
-									<div class="card-header-side pull-left">
-										<span class="avatar avatar-sm"><img src="./images/profils/AlexandreTRAN.jpg"></span>
-									</div>
-									<div class="card-inner">
-										<span>Alexandre TRAN</span>
-									</div>
-								</div>
-							</a>
-						</li>
-					</ul>
+					<a class="waves-attach" href="#/CelineLIM">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/CelineLIM.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Celine LIM</span>
+							</div>
+						</div>
+					</a>
 				</li>
 				<li>
-					<a class="collapsed waves-attach" data-toggle="collapse" href="#doc_menu_extras">Vidéos</a>
-					<ul class="collapse menu-collapse" id="doc_menu_extras">
-						<!--<li>-->
-						<!--<a class="waves-attach" href="#">2010</a>-->
-						<!--</li>-->
-						<!--<li>-->
-						<!--<a class="waves-attach" href="#">Noel 2005</a>-->
-						<!--</li>-->
-					</ul>
+					<a class="waves-attach" href="#/AxelleLY">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/AxelleLY.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Axelle LY</span>
+							</div>
+						</div>
+					</a>
 				</li>
+				<li>
+					<a class="waves-attach" href="#/VirginieSOK">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/VirginieSOK.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Virginie SOK</span>
+							</div>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a class="waves-attach" href="#/OscarSChen">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/OscarSChen.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Oscar S Chen</span>
+							</div>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a class="waves-attach" href="#/TimotheeTHUM">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/TimotheeTHUM.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Timothée THUM</span>
+							</div>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a class="waves-attach" href="#/DavidSOK">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/DavidSOK.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>David SOK</span>
+							</div>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a class="waves-attach" href="#/PaulineTANG">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/PaulineTANG.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Pauline TANG</span>
+							</div>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a class="waves-attach" href="#/OlivierManiphanh">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/OlivierManiphanh.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Olivier Maniphanh</span>
+							</div>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a class="waves-attach" href="#/AncelineDONG">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/AncelineDONG.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Anceline DONG</span>
+							</div>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a class="waves-attach" href="#/MarleneDONG">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/MarleneDONG.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Marlène DONG</span>
+							</div>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a class="waves-attach" href="#/JonathanDONG">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/JonathanDONG.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Jonathan DONG</span>
+							</div>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a class="waves-attach" href="#/StephaneMahtout">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/StephaneMahtout.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Stephane Mahtout</span>
+							</div>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a class="waves-attach" href="#/JeremyNG">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/JeremyNG.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Jeremy NG</span>
+							</div>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a class="waves-attach" href="#/JessicaSOK">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/JessicaSOK.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Jessica SOK</span>
+							</div>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a class="waves-attach" href="#/PascalJonathanTRAN">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/PascalJonathanTRAN.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Pascal & Jonathan TRAN</span>
+							</div>
+						</div>
+					</a>
+				</li>
+				<li>
+					<a class="waves-attach" href="#/AlexandreTRAN">
+						<div class="card-header">
+							<div class="card-header-side pull-left">
+								<span class="avatar avatar-sm"><img src="./images/profils/AlexandreTRAN.jpg"></span>
+							</div>
+							<div class="card-inner">
+								<span>Alexandre TRAN</span>
+							</div>
+						</div>
+					</a>
+				</li>
+			<!--</ul>-->
+			<!--</li>-->
+			<!--<li>-->
+			<!--<a class="collapsed waves-attach" data-toggle="collapse" href="#doc_menu_extras">Vidéos</a>-->
+			<!--<ul class="collapse menu-collapse" id="doc_menu_extras">-->
+			<!--&lt;!&ndash;<li>&ndash;&gt;-->
+			<!--&lt;!&ndash;<a class="waves-attach" href="#">2010</a>&ndash;&gt;-->
+			<!--&lt;!&ndash;</li>&ndash;&gt;-->
+			<!--&lt;!&ndash;<li>&ndash;&gt;-->
+			<!--&lt;!&ndash;<a class="waves-attach" href="#">Noel 2005</a>&ndash;&gt;-->
+			<!--&lt;!&ndash;</li>&ndash;&gt;-->
+			<!--</ul>-->
+			<!--</li>-->
 			</ul>
 		</div>
 	</div>
@@ -329,8 +329,7 @@
 					<div class="card-main">
 						<div class="card-inner">
 							<p>Petite page pour toi Kevin ! Amuse toi à regarder ce que tout le monde t'as laissé comme message !</p>
-							<blockquote> Kevin ! </blockquote>
-							<p>Un espace rien que pour ton Baptême !</p>
+							<blockquote>Un espace rien que pour ton Baptême !</blockquote>
 						</div>
 					</div>
 				</div>
