--- a/public/index.html
+++ b/public/index.html
@@ -846,7 +846,7 @@
 
 <script id="VirginieSOK" type="text/x-kendo-template">
 	<div class="col-md-12 col-sm-1">
-		<div class="card">
+		<div class="card ColorBlockOrange">
 			<div class="card-main">
 				<div class="card-header">
 					<div class="card-header-side pull-left">
