--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <script>
 
             // Connexion à socket.io
-            var socket = io.connect('http://localhost:8080');
+            var socket = io.connect('http://localhost:' + process.env.PORT || 3000);
 
             // On demande le pseudo, on l'envoie au serveur et on l'affiche dans le titre
             var pseudo = prompt('Quel est votre pseudo ?');
