--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <script>
 
             // Connexion à socket.io
-            var socket = io.connect('https://chet-todo-api.herokuapp.com:' + process.env.PORT || 3000);
+            var socket = io.connect(window.location.hostname);
 
             // On demande le pseudo, on l'envoie au serveur et on l'affiche dans le titre
             var pseudo = prompt('Quel est votre pseudo ?');
