--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     </head>
  
     <body>
-        <h1>Support ninie ? </h1>
-
-        <form action="/" method="post" id="formulaire_chat">
+        <form action="https://chet-todo-api.herokuapp.com/" method="post" id="formulaire_chat">
             <input type="text" name="message" id="message" placeholder="Votre message..." size="50" autofocus />
             <input type="submit" id="envoi_message" value="Envoyer" />
         </form>
