--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
  
     <body>
-        <form action="https://chet-todo-api.herokuapp.com/" method="post" id="formulaire_chat">
+        <form action="http://chet-todo-api.herokuapp.com:3000/" method="post" id="formulaire_chat">
             <input type="text" name="message" id="message" placeholder="Votre message..." size="50" autofocus />
             <input type="submit" id="envoi_message" value="Envoyer" />
         </form>
